# merging-galore

./: .gitignore  README.md  SUBMITTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
conf/: multitask.yaml
conf/benchmark/: N14.yaml  N2.yaml  N20.yaml  N8.yaml  hard10.yaml
conf/dataset/: CIFAR10.yaml  CIFAR100.yaml  Cars.yaml  DTD.yaml  EMNIST.yaml  EuroSAT.yaml  FER2013.yaml  FashionMNIST.yaml  Flowers102.yaml  Food101.yaml  GTSRB.yaml  KMNIST.yaml  MNIST.yaml  OxfordIIITPet.yaml  PCAM.yaml  RESISC45.yaml  RenderedSST2.yaml  STL10.yaml  SUN397.yaml  SVHN.yaml
conf/hydra/: default.yaml
conf/merger/: dummy.yaml  isotropic.yaml  task_arithmetic.yaml  tsv.yaml  tsv_full_rank.yaml
conf/nn/: default.yaml
conf/nn/encoder/: b16.yaml  b32.yaml  l14.yaml
conf/nn/module/: default.yaml
conf/train/: default.yaml
results/finetuning/: accs.json
scripts/: build_submission.py  evaluate_multitask_merging.py
src/model_merging/: __init__.py
src/model_merging/data/: README.md  dataset.py
src/model_merging/merger/: dummy_merger.py  isotropic_merger.py  merger.py  task_arithmetic_merger.py  tsv_full_rank_merger.py  tsv_merger.py  weight_avg_merger.py
src/model_merging/merging/: structured.py  task_vectors.py
src/model_merging/model/: encoder.py  heads.py  image_classifier.py
src/model_merging/utils/: io_utils.py  utils.py
